# dataframeit

./: .gitignore  CHANGELOG.md  CLAUDE.md  ISSUE_74_ANALYSIS.md  ISSUE_BUG_KEYERROR_FORMAT_AND_COPY.md  README.md  ROADMAP.md  analise_sistematica.py  clusters_analisados.xlsx  clusters_saude_cluster_amostras_rodada5_5porCluster.xlsx  context7.json  mkdocs.yml  pyproject.toml  respostaFinal.py  test_inplace_modification.py  test_stacklevel.py  test_warnings_stacklevel.py
.backup_old_code/: __init__.py  core_new.py  dataframeit.py  llm_new.py  utils.py
.backup_old_code/core/: base.py
docs/: index.md
example/: 01_basic.ipynb  02_error_handling.ipynb  03_resume.ipynb  04_custom_placeholder.ipynb  05_advanced_legal.ipynb  06_polars.ipynb  07_multiple_data_types.ipynb  08_rate_limiting.ipynb  README.md  example.py  example_01_basic.py  example_02_openai.py  example_03_error_handling.py  example_04_resume.py  example_05_custom_placeholder.py  example_06_advanced_legal.py  example_07_polars.py  example_08_multiple_data_types.py  example_09_web_search.py  example_rate_limiting.py  rate_limiting.ipynb  sample_data.csv
tests/: test_agent_helpers.py  test_batch_checkpoint.py  test_claude_code.py  test_compatibility.py  test_conditional.py  test_errors.py  test_inplace_modification.py  test_llm.py  test_multiple_data_types.py  test_normalize_python_structures.py  test_parallel_requests.py  test_regressions.py  test_reprocess_columns.py  test_save_trace.py  test_search.py  test_search_providers.py  test_simplification.py  test_sql_source.py  test_text_column_inference.py
(+57 files in other folders)
